Fix issues found in vulnerability scan
Per Amy Vaughn Liles:

> For the insecure iframe, please add the highlighted code:
> <iframe src=https://www.googletagmanager.com/ns.html?id=GTM-WTZM59X height="0" width="0" style="display:none;visibility:hidden" sandbox="allow-same-origin"></iframe>
> And you should be able to update jQuery to the latest version. Let us know if anything breaks.

Nothing has broken; page looks fine

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
 		<script src="https://kit.fontawesome.com/32f532493a.js" crossorigin="anonymous"></script>
 
 		<!-- jQuery -->
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery-3.6.1.min.js"   integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="   crossorigin="anonymous"></script>
 
 		<!-- == END APPLICATION HEAD == -->
 	</head>
@@ -58,7 +58,7 @@
 
 		<!-- Google Tag Manager (noscript) -->
 		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG7PVKB"
-						  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+						  height="0" width="0" style="display:none;visibility:hidden"  sandbox="allow-same-origin"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
 		<!-- Site application banner -->
